<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="E_Cylinder" Id="{db0839f6-a927-4f0b-b607-d89fe34d09e6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Cylinder :
(
Line0Part:=1,//主流线分料气缸

Line0Prevent,//主流线阻挡气缸

Line1Elevator,//流水线1提升气缸

Line1Lift,//流水线1顶升气缸

Line1Prevent,//流水线1阻挡气缸

Line1Rotate,//流水线1旋转气缸

Line1Adjust1,//流水线1调宽气缸1

Line2Lift,//流水线2顶升气缸

Line2Prevent,//流水线2阻挡气缸

Line2Standard1,//流水线2校平气缸1

Line2Standard2,//流水线2校平气缸2

Line2OpenLateral1,//流水线2解锁侧推气缸1

Line2OpenRotate,//流水线2解锁旋转气缸

Line2OpenLateral2,//流水线2解锁侧推气缸2

Line3LoadLift,//流水线3上料位顶升

Line3LoadPrevent,//流水线3上料位阻挡

Line3LoadRotate,//流水线3上料位旋转

Line3OpenLift,//流水线3解锁位顶升

Line3OpenPrevent,//流水线3解锁位阻挡

Line3Standard1,//流水线3校平气缸1

Line3Standard2,//流水线3校平气缸2

Line3OpenLateral1,//流水线3解锁侧推气缸1

Line3OpenRotate,//流水线3解锁旋转气缸

Line3OpenLateral2,//流水线3解锁侧推气缸2

TakeLift1,//取料模组升降气缸1

TakeLift2,//取料模组升降气缸2

TakeClamp,//取料模组夹紧气缸

UcLift,//下UC模组升降气缸

UcClamp,//下UC模组夹紧气缸

UcSwing,//下UC模组摆动气缸

UcLift1,//下UC升降气缸1

UcClamp1,//下UC夹紧气缸1

UcRotate1,//下UC旋转气缸1

UcLift2,//下UC升降气缸2

UcClamp2,//下UC夹紧气缸2

UcRotate2,//下UC旋转气缸2

UcDrive,//下UC皮带推料气缸

FrockElevator1,//下工装提升气缸1

FrockRotateDown1,//下工装旋转压紧气缸1

FrockPush1,//下工装拨料气缸1

FrockElevator2,//下工装提升气缸2

FrockRotateDown2,//下工装旋转压紧气缸2

FrockPush2,//下工装拨料气缸2

FrockBelt//下工装皮带推料气缸
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>